<resources>
    <string name="app_name">GitTogether</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="profile">Profile</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="post_to_feed">Post to Feed</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="post">Post</string>
    <string name="post_header">Post to Feed</string>
    <string name="upload_image">Upload Image</string>
    <string name="title_here">Title here</string>
    <string name="message_here">Message goes here.</string>
</resources>