<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/post_to_feed_title"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="685dp"
        android:gravity="left"
        android:text="@string/post_to_feed"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/post_title_text"
        android:layout_width="397dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="603dp"
        android:background="@drawable/my_border"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_to_feed_title"
        android:paddingStart="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/post_message_text"
        android:layout_width="397dp"
        android:layout_height="295dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="279dp"
        android:autofillHints=""
        android:background="@drawable/my_border"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_text"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/post_button"
        android:layout_width="397dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="164dp"
        android:text="@string/post"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#000000"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_message_text" />
</androidx.constraintlayout.widget.ConstraintLayout>