<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="651dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/post_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="149dp"
            android:layout_marginRight="149dp"
            android:layout_marginBottom="574dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/post_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_post_title"
            android:layout_width="309dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="502dp"
            android:background="@drawable/my_border"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_header"
            android:importantForAutofill="no"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/edit_post_message"
            android:layout_width="308dp"
            android:layout_height="273dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="203dp"
            android:width="309dp"
            android:background="@drawable/my_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_post_title"
            android:importantForAutofill="no"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/button_post"
            android:layout_width="253dp"
            android:layout_height="77dp"
            android:layout_marginStart="79dp"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="77dp"
            android:width="250dp"
            android:text="@string/post"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_post_message"
            app:layout_constraintVertical_bias="0.551" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>